--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Edward Alexander Buchanan",
   "license": "MIT",
   "dependencies": {
+    "browserify-incremental": "^3.0.1",
     "immutable": "^3.7.5",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
@@ -12,6 +13,7 @@
     "moment-range": "^2.0.3",
     "react": "^0.14.0",
     "react-router": "^1.0.0-rc3",
+    "react-scroll-components": "^0.2.2",
     "react-templates": "^0.2.0",
     "reflux": "^0.3.0"
   },
