--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.10.6",
     "moment-range": "^2.0.3",
     "react": "^0.14.0",
+    "react-addons-pure-render-mixin": "^0.14.0",
     "react-router": "^1.0.0-rc3",
     "react-scroll-components": "^0.2.2",
     "react-templates": "^0.2.0",
