clean out packages and fix incremental browserify

--- a/package.json
+++ b/package.json
@@ -5,27 +5,23 @@
   "author": "Edward Alexander Buchanan",
   "license": "MIT",
   "dependencies": {
-    "browserify-incremental": "^3.0.1",
+    "classnames": "^2.2.0",
     "immutable": "^3.7.5",
     "jquery": "^2.1.4",
-    "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "moment-range": "^2.0.3",
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
     "react-router": "^1.0.0-rc3",
-    "react-scroll-components": "^0.2.2",
-    "react-templates": "^0.2.0",
     "reflux": "^0.3.0"
   },
   "devDependencies": {
     "browserify": "^11.2.0",
+    "browserify-incremental": "^3.0.1",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-load-plugins": "^1.0.0",
-    "gulp-react-templates": "^0.1.0",
     "gulp-webserver": "^0.9.1",
-    "react-templatify": "^0.2.0",
     "run-sequence": "^1.1.4",
     "vinyl-source-stream": "^1.1.0"
   }
