--- a/sorted.yml
+++ b/sorted.yml
@@ -85,6 +85,7 @@ description: Walk to Jagat
 date: 2015-09-20
 ---
 description: Bus to Besi Sahar. Walk to Bhulbhule
+type: bus
 date: 2015-09-19
 ---
 description: Prepare for trek.
@@ -134,6 +135,7 @@ description: To Pangong Lake
 date: 2015-08-30
 ---
 description: Bus back to Leh. Markets
+type: bus
 date: 2015-08-29
 ---
 description: Trek to Yangthang homestay
@@ -173,6 +175,7 @@ description: Start stay at green roof
 date: 2015-08-13
 ---
 description: Arrive in Mcleod Ganj after a very tiring day of bus travel.
+type: bus
 date: 2015-08-12
 ---
 date: 2015-08-11
@@ -207,6 +210,7 @@ description: Ellora Caves
 date: 2015-08-05
 ---
 description: 'Movies all day. Overnight bus to Aurangabad '
+type: bus
 date: 2015-08-04
 ---
 description: Walk around bijapur. Lots of movies. Very homesick.
@@ -259,16 +263,8 @@ date: 2015-07-11
 type: flight
 description: Fly to India
 ---
-description: Stay at Bastian Homestay
-date: 2015-07-11
----
-description: Stay at Old Light House Bristow
-date: 2015-07-11
----
-description: Fly to India
-date: 2015-07-11
----
-description: Flight to Kuala Lumpur
+description: Fly to India. Stay at Bastian Homestay
+type: flight
 date: 2015-07-11
 ---
 description: Picked up Indian visa. Went shopping . Drinks with Diane and Pau
@@ -321,16 +317,15 @@ date: 2015-06-06
 description: 'A day of recovery and GTD!'
 date: 2015-06-05
 ---
-description: Travel to Jakarta. Handa Muay Thai training.
+description: Handa Muay Thai training.
 date: 2015-06-04
 ---
 description: Flight to Jakarta
+type: flight
 date: 2015-06-04
 ---
-description: Travel to Bangkok
-date: 2015-06-03
----
 description: Flight to Bangkok
+type: flight
 date: 2015-06-03
 ---
 description: 'Lazy day. Temple. Freddy and Brecht have awesome jam session at '
@@ -345,10 +340,8 @@ date: 2015-05-30
 description: Stay at Bunchun Art and Hostel
 date: 2015-05-29
 ---
-description: Leave for Chiang Mai
-date: 2015-05-29
----
 description: Bus to Chiang Mai. Go out with Belgians and Canadians
+type: bus
 date: 2015-05-29
 ---
 description: Market with Italian girl. Never got her name.
@@ -377,6 +370,7 @@ description: 'Walk around Georgetown all day. Really, really hot day. Have te'
 date: 2015-05-21
 ---
 description: 'Morning trips with Lau. Bus to Georgetown, Penang.'
+type: bus
 date: 2015-05-20
 ---
 description: 'Rainy, stormy, lazy, almost depressed day at Bukit Larut. Rea'
@@ -396,6 +390,7 @@ description: Ipoh. Sam Poh Tong. Hang out with Paddy and Luke
 date: 2015-05-16
 ---
 description: Bus to Ipoh. Street art and food.
+type: bus
 date: 2015-05-15
 ---
 description: Cameron Highlands.
@@ -418,9 +413,11 @@ description: Trail 9A and Boh Tea Estate. Picked up by Malay-Chinese group. T
 date: 2015-05-10
 ---
 description: Bus to Cameron Highlands. Stay at Hillview Inn. Catch up on thin
+type: bus
 date: 2015-05-09
 ---
 description: 'Travel all day. Ferry to Mersing, bus to Kuantan, bus to Ipoh.'
+type: bus
 date: 2015-05-08
 ---
 description: Walk back to Tekek from Juara. Cheers Chalet on Tioman. Meet Suz
@@ -450,6 +447,7 @@ description: 'Boat to Pulau Tioman, Air Batang. Again, almost no place to sl'
 date: 2015-05-02
 ---
 description: Leave for Malaysia. Intense travel day. Hours of buses and immig
+type: bus
 date: 2015-05-01
 ---
 description: Chinatown. Long chat with Bboy (never got his name)
@@ -515,6 +513,7 @@ description: Arrive in Bali
 date: 2015-03-30
 ---
 description: Airport
+type: airplane
 date: 2015-03-29
 ---
 description: Kiwiburn after party
