--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
     "react-router": "^1.0.0-rc3",
-    "reflux": "^0.3.0"
+    "reflux": "^0.3.0",
+    "yaml-to-json": "^0.3.0"
   },
   "devDependencies": {
     "browserify": "^11.2.0",
