start some simple editing tools

--- a/sorted.yml
+++ b/sorted.yml
@@ -741,9 +741,11 @@ date: 2015-01-04
 ---
 description: Sailing in Paihia with Captain Ron
 date: 2015-01-03
+backgroundImage: "/images/bay-of-islands-icon.jpeg"
 ---
 description: 'Cape Regina, Ahipara, Paihia'
 date: 2015-01-02
+backgroundImage: "/images/ahipara-icon.jpeg"
 ---
 description: Spirits Bay
 date: 2015-01-01
