--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "author": "Edward Alexander Buchanan",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "classnames": "^2.2.0",
+    "express": "^4.13.3",
+    "gulp-sym": "0.0.14",
+    "history": "^1.13.0",
     "immutable": "^3.7.5",
     "jquery": "^2.1.4",
     "moment": "^2.10.6",
@@ -21,6 +25,8 @@
     "browserify-incremental": "^3.0.1",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
+    "gulp-directory-map": "^0.1.2",
+    "gulp-filelist": "^0.2.0",
     "gulp-load-plugins": "^1.0.0",
     "gulp-webserver": "^0.9.1",
     "run-sequence": "^1.1.4",
