--- a/package.json
+++ b/package.json
@@ -5,19 +5,34 @@
   "author": "Edward Alexander Buchanan",
   "license": "MIT",
   "dependencies": {
+    "baconjs": "^0.7.82",
     "body-parser": "^1.14.1",
     "classnames": "^2.2.0",
+    "debounce": "^1.0.0",
     "express": "^4.13.3",
+    "extend": "^3.0.0",
     "gulp-sym": "0.0.14",
+    "highland": "^2.5.1",
     "history": "^1.13.0",
     "immutable": "^3.7.5",
+    "interval-tree": "^0.1.0",
     "jquery": "^2.1.4",
+    "keyboardjs": "^2.2.0",
+    "keyevents": "^2.0.0",
+    "keymage": "^1.1.2",
+    "map-stream": "0.0.6",
+    "mapbox": "^0.10.0",
+    "mapbox-gl": "^0.11.4",
     "moment": "^2.10.6",
     "moment-range": "^2.0.3",
+    "q": "^1.4.1",
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
+    "react-autocomplete": "file:react-autocomplete",
+    "react-autosuggest": "^2.1.1",
     "react-router": "^1.0.0-rc3",
     "reflux": "^0.3.0",
+    "through2": "^2.0.0",
     "yaml-to-json": "^0.3.0"
   },
   "devDependencies": {
@@ -27,8 +42,11 @@
     "gulp": "^3.9.0",
     "gulp-directory-map": "^0.1.2",
     "gulp-filelist": "^0.2.0",
+    "gulp-gm": "0.0.8",
+    "gulp-image-resize": "^0.7.1",
     "gulp-load-plugins": "^1.0.0",
     "gulp-webserver": "^0.9.1",
+    "node-notifier": "^4.3.1",
     "run-sequence": "^1.1.4",
     "vinyl-source-stream": "^1.1.0"
   }
