--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Edward Alexander Buchanan",
   "license": "MIT",
   "dependencies": {
+    "arc": "^0.1.0",
     "baconjs": "^0.7.82",
     "body-parser": "^1.14.1",
     "classnames": "^2.2.0",
@@ -45,6 +46,8 @@
     "gulp-gm": "0.0.8",
     "gulp-image-resize": "^0.7.1",
     "gulp-load-plugins": "^1.0.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-util": "^3.0.7",
     "gulp-webserver": "^0.9.1",
     "node-notifier": "^4.3.1",
     "run-sequence": "^1.1.4",
