--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "arc": "^0.1.0",
+    "babel": "^6.1.18",
+    "babel-polyfill": "^6.2.0",
     "baconjs": "^0.7.82",
     "body-parser": "^1.14.1",
     "classnames": "^2.2.0",
@@ -18,6 +20,7 @@
     "immutable": "^3.7.5",
     "interval-tree": "^0.1.0",
     "jquery": "^2.1.4",
+    "js-csp": "^0.5.0",
     "keyboardjs": "^2.2.0",
     "keyevents": "^2.0.0",
     "keymage": "^1.1.2",
@@ -34,6 +37,7 @@
     "react-router": "^1.0.0-rc3",
     "reflux": "^0.3.0",
     "through2": "^2.0.0",
+    "transducers.js": "^0.3.2",
     "yaml-to-json": "^0.3.0"
   },
   "devDependencies": {
