--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debounce": "^1.0.0",
     "express": "^4.13.3",
     "extend": "^3.0.0",
+    "freezer-js": "^0.9.4",
     "gulp-sym": "0.0.14",
     "highland": "^2.5.1",
     "history": "^1.13.0",
