--- a/package.json
+++ b/package.json
@@ -6,25 +6,15 @@
   "license": "MIT",
   "dependencies": {
     "arc": "^0.1.0",
-    "babel": "^6.1.18",
-    "babel-polyfill": "^6.2.0",
-    "baconjs": "^0.7.82",
     "body-parser": "^1.14.1",
     "classnames": "^2.2.0",
-    "debounce": "^1.0.0",
     "express": "^4.13.3",
     "extend": "^3.0.0",
-    "freezer-js": "^0.9.4",
     "gulp-sym": "0.0.14",
-    "highland": "^2.5.1",
     "history": "^1.13.0",
     "immutable": "^3.7.5",
-    "interval-tree": "^0.1.0",
     "jquery": "^2.1.4",
     "js-csp": "^0.5.0",
-    "keyboardjs": "^2.2.0",
-    "keyevents": "^2.0.0",
-    "keymage": "^1.1.2",
     "map-stream": "0.0.6",
     "mapbox": "^0.10.0",
     "mapbox-gl": "^0.11.5",
@@ -34,15 +24,18 @@
     "q": "^1.4.1",
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
-    "react-autocomplete": "file:react-autocomplete",
-    "react-autosuggest": "^2.1.1",
-    "react-router": "^1.0.0-rc3",
-    "reflux": "^0.3.0",
+    "react-redux": "^4.0.1",
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.2",
+    "seamless-immutable": "^4.1.1",
     "through2": "^2.0.0",
     "transducers.js": "^0.3.2",
     "yaml-to-json": "^0.3.0"
   },
   "devDependencies": {
+    "babel": "^6.1.18",
+    "babel-plugin-extensible-destructuring": "^2.0.0",
+    "babel-polyfill": "^6.2.0",
     "browserify": "^11.2.0",
     "browserify-incremental": "^3.0.1",
     "del": "^2.0.2",
@@ -53,11 +46,13 @@
     "gulp-image-resize": "^0.7.1",
     "gulp-load-plugins": "^1.0.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-sweetjs": "^0.6.0",
     "gulp-util": "^3.0.7",
     "gulp-webserver": "^0.9.1",
     "node-notifier": "^4.3.1",
+    "redux-devtools": "^3.0.0",
     "run-sequence": "^1.1.4",
-    "tape": "^4.2.2",
+    "sweet.js": "^0.7.4",
     "vinyl-source-stream": "^1.1.0"
   }
 }
