--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "q": "^1.4.1",
     "react": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
+    "react-draggable": "^1.1.3",
     "react-redux": "^4.0.1",
     "redux": "^3.0.5",
     "redux-thunk": "^1.0.2",
