--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "redux-devtools": "^3.0.0",
     "run-sequence": "^1.1.4",
     "sweet.js": "^0.7.4",
+    "tape-dom": "0.0.10",
     "vinyl-source-stream": "^1.1.0"
   }
 }
